# fox-ironfish

./: .gitmodules  Cargo.toml
ironfish-rust/: Cargo.toml
ironfish-rust-nodejs/src/: lib.rs
ironfish-rust/src/: errors.rs  lib.rs  sapling.rs  sapling_bls12.rs
ironfish-rust/src/keys/: mod.rs
ironfish-rust/src/transaction/: mints.rs  mod.rs  outputs.rs  spends.rs  tests.rs  utils.rs  verify.rs
ironfish-zkp/: Cargo.toml
