[workspace]
resolver = "2"

members = [
    "benchmarks",
    "ironfish-rust",
    "ironfish-bellperson",
    "ironfish-rust-wasm",
    "ironfish-zkp",
]

[workspace.package]
authors = ["Iron Fish <contact@ironfish.network> (https://ironfish.network)"]
edition = "2021"
homepage = "https://ironfish.network/"
repository = "https://github.com/iron-fish/ironfish"

[profile.release]
debug = true

[patch.crates-io]
ironfish-bellperson = { version = "0.2.0", path = "./ironfish-bellperson", features = ["groth16"] }
